--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="menu_schedule">Schedule</string>
     <string name="menu_all_task">All Task</string>
     <string name="menu_compled_task">Completed Task</string>
+    <string name="menu_kpt">KPT</string>
 
 <!--一般名詞-->
     <string name="calender">カレンダー</string>
@@ -18,8 +19,8 @@
     <string name="update">更新</string>
 
 <!--登録画面-->
-    <string name="register_task_dialog_fragment_select_date">日付を選択</string>
-    <string name="register_task_dialog_fragment_select_time">時間を選択</string>
+    <string name="register_task_dialog_fragment_select_date">-- 日付 --</string>
+    <string name="register_task_dialog_fragment_select_time">-- 時刻 --</string>
     <string-array name="priority_list">
         <item>設定なし</item>
         <item>低</item>
