追加：マスタデータ登録画面作成

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="menu_all_task">All Task</string>
     <string name="menu_compled_task">Completed Task</string>
     <string name="menu_kpt">KPT</string>
+    <string name="menu_register_master_data">Register master data</string>
 
 <!--一般名詞-->
     <string name="calender">カレンダー</string>
